d654b64 fix: package name should match deploy name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gis-app",
+  "name": "mapping-app",
   "version": "29.0.4",
   "description": "GIS Web App for DHIS 2",
   "main": "build/index.js",
